--- a/config/corne.conf
+++ b/config/corne.conf
@@ -3,4 +3,19 @@
 # CONFIG_WS2812_STRIP=y
 
 # Uncomment the following line to enable the Corne OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
+
+#Reenable for deep sleep.
+#CONFIG_ZMK_SLEEP=y
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1200000
+
+# Set screen blanking to f 30s
+#CONFIG_ZMK_IDLE_TIMEOUT=30000
+
+# Modify Debounce times
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=3
+
+#Up bluetooth transmit power
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_ZMK_KEYBOARD_NAME="Corne_Reborn"
